# openVulkano

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  openVulkanoCpp.sln  openVulkanoCpp.sln.DotSettings
openVulkanoCpp/: main.cpp  openVulkanoCpp.vcxproj
openVulkanoCpp/Base/: EngineConfiguration.hpp  EngineConstants.hpp  ICloseable.hpp  IGraphicsApp.hpp  IGraphicsAppManager.hpp  IInitable.hpp  ITickable.hpp  Logger.cpp  Logger.hpp  PlatformEnums.hpp  Timer.hpp  Utils.hpp
openVulkanoCpp/Base/Render/: IRenderer.hpp
openVulkanoCpp/Base/UI/: BaseWindow.hpp  IWindow.hpp
openVulkanoCpp/Data/: ReadOnlyAtomicArrayQueue.hpp
openVulkanoCpp/Host/: GraphicsAppManager.hpp  PlatformProducer.hpp  WindowGLFW.hpp
openVulkanoCpp/Scene/: AABB.hpp  Camera.hpp  Drawable.cpp  Drawable.hpp  Geometry.hpp  Material.hpp  Node.cpp  Node.hpp  Scene.hpp  Shader.hpp  Vertex.hpp
openVulkanoCpp/Shader/: CompileShaders.bat  basic.frag  basic.vert  basic.vert.spv
openVulkanoCpp/Vulkan/: Buffer.hpp  CommandHelper.hpp  Context.hpp  Device.hpp  DeviceManager.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Image.hpp  Pipeline.hpp  RenderPass.hpp  Renderer.hpp  SwapChain.hpp  VulkanUtils.hpp
openVulkanoCpp/Vulkan/Debuging/: ValidationLayer.hpp
openVulkanoCpp/Vulkan/Resources/: IShaderOwner.hpp  ManagedResource.hpp  ResourceManager.hpp  UniformBuffer.hpp
openVulkanoCpp/Vulkan/Scene/: IRecordable.hpp  VulkanGeometry.hpp  VulkanNode.hpp  VulkanShader.hpp
